[gd_scene load_steps=2 format=3 uid="uid://cxj72pj6vqkc3"]

[ext_resource type="Script" uid="uid://cdr7r6xos83d5" path="res://Components/tree_browser.gd" id="1_eltdb"]

[node name="Tree" type="HBoxContainer" groups=["Browser"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eltdb")
metadata/_tab_index = 0

[node name="File_List" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 5
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
hide_root = true
select_mode = 1
auto_tooltip = false

[connection signal="column_title_clicked" from="File_List" to="." method="_on_file_list_column_title_clicked"]
[connection signal="item_activated" from="File_List" to="." method="_on_file_list_item_activated"]
[connection signal="item_mouse_selected" from="File_List" to="." method="_on_file_list_item_mouse_selected"]
[connection signal="item_selected" from="File_List" to="." method="_on_file_list_item_selected"]
